--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fun-with-nom"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "A repo and playground for learning the Nom crate"
 readme = "README.md"
@@ -19,6 +19,7 @@ path = "src/lib/lib.rs"
 [dependencies]
 actix-web = "4.5.1"
 nom = "7.1.3"
+serde = { version = "1.0.196", features = ["derive"] }
 shuttle-actix-web = "0.39.0"
 shuttle-runtime = "0.39.0"
 tokio = "1.26.0"
